tests/sources/valid/echo_string.minipl
print "give me a string value\n";
var echo: string;
read echo;
print echo;