tests/sources/invalid/as_boolean_failed.minipl
var x: bool := true;
var y: string := "a";
print x & y;